--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,22 +1,9 @@
-.jumbotron {
-	max-height:  5em;
-	padding-top: 0.1em;
-	padding-bottom: 0.1em;
-	margin-bottom: 0.2em;
+#code_area{
+    height: 100px;
+    width: 500px;
+    background-color: powderblue;
 }
 
-.container-fluid {
-	padding-top: 0.25em;
-}
-
-.CodeMirror {
- 	border: 1px solid #eee;
- 	width: 98%;
- 	height: 30em !important;
-}
-
-.output-area{
-	border: 1px solid #eee;
- 	width: 98%;
- 	height: 30em !important;
+.key{
+    color: red;
 }
