--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,37 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+/* demo stylesheet, makes a full page .input */
+
+* {
+	margin: 0;
+	padding: 0;
 }
 
-a {
-  color: #00B7FF;
+html, body {
+	width: 100%;
+	height: 100%;
+}
+
+.input{
+	width: 43%;
+	height: 70% !important;
+}
+
+body {
+	padding: .5em;
+	box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+}
+
+/* pretty textarea */
+.input {
+	border: 1px solid #aaa;
+	box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	box-shadow: 0 4px 8px #eee inset;
+	-moz-box-shadow: 0 4px 8px #eee inset;
+	-webkit-box-shadow: 0 4px 8px #eee inset;
+	border-radius: 4px;
+	-moz-border-radius: 4px;
+	-webkit-border-radius: 4px;
 }
